--- a/movie.html
+++ b/movie.html
@@ -11,6 +11,9 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
+<!-- Plyr CSS -->
+<link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+
 <script>
 const firebaseConfig = {
   apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
@@ -26,18 +29,17 @@ firebase.initializeApp(firebaseConfig);
 
 <style>
 body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
-.player{max-width:800px;margin:0 auto}
-.player iframe{width:100%;height:56vw;max-height:450px;border:none;border-radius:10px;background:#000}
-.details{max-width:800px;margin:16px auto;background:#111;padding:16px;border-radius:14px}
+.player{max-width:900px;margin:0 auto;position:relative;aspect-ratio:16/9;background:#000;border-radius:10px;overflow:hidden;}
+.details{max-width:900px;margin:16px auto;background:#111;padding:16px;border-radius:14px}
 .meta{color:#aaa;font-size:14px;margin-bottom:8px}
 .watch{background:#e50914;color:#fff;font-size:20px;padding:16px;width:100%;border:none;border-radius:14px;font-weight:bold;cursor:pointer;margin-bottom:10px}
 .share{background:#222;color:#fff;font-size:16px;padding:14px;width:100%;border:none;border-radius:14px;cursor:pointer}
-.share-options{display:none;margin-top:10px;gap:10px}
+.share-options{display:none;margin-top:10px;gap:10px;flex-wrap:wrap;display:flex}
 .share-options button{flex:1;padding:12px;border:none;border-radius:10px;font-weight:bold;cursor:pointer}
 .whatsapp{background:#25D366;color:#000}
 .imo{background:#00b2ff;color:#000}
 .tiktok{background:#000;color:#fff;border:1px solid #333}
-#commentsSection{max-width:800px;margin:20px auto;background:#111;padding:16px;border-radius:14px}
+#commentsSection{max-width:900px;margin:20px auto;background:#111;padding:16px;border-radius:14px}
 #commentsList div{background:#222;padding:8px 10px;border-radius:8px;margin-bottom:6px;position:relative}
 #usernameInput,#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-bottom:6px}
 #commentBtn{padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
@@ -46,7 +48,10 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
 
 <body>
 
-<div class="player" id="player"></div>
+<!-- Plyr Player -->
+<div class="player">
+  <video id="player" controls crossorigin></video>
+</div>
 
 <div class="details">
   <h1 id="title"></h1>
@@ -60,8 +65,9 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
     <button class="imo" id="shareImo">IMO</button>
     <button class="tiktok" id="shareTiktok">TikTok</button>
   </div>
-<!-- AD SLOT (FREE CONTENT ONLY) -->
-<div id="adBox" class="ad-box" style="display:none;"></div>
+
+  <!-- AD SLOT (FREE CONTENT ONLY) -->
+  <div id="adBox" class="ad-box" style="display:none;"></div>
 
   <p id="synopsis"></p>
 </div>
@@ -74,11 +80,14 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
   <button id="commentBtn">Post Comment</button>
 </div>
 
+<!-- Plyr JS -->
+<script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+
 <script>
 // ===== LOAD MOVIE =====
 var params = new URLSearchParams(location.search);
 var id = params.get("id");
-var movie = MOVIES.find(function(m){ return m.id === id; });
+var movie = MOVIES.find(m => m.id === id);
 if(!movie) location.replace("movies.html");
 
 /* ===== ADS: FREE CONTENT ONLY ===== */
@@ -109,20 +118,18 @@ function showAd(){
   adBox.appendChild(s);
 }
 
-
-
+// ===== POPULATE INFO =====
 title.textContent = movie.title;
 meta.textContent = movie.country + " • " + movie.year;
 synopsis.textContent = movie.synopsis || "";
 
-// ===== VIDEO NORMALIZATION (YOUTUBE FIXED) =====
+// ===== VIDEO NORMALIZATION =====
 function normalizeVideo(url){
   try{
     url = url.trim();
 
     if(url.includes("youtube.com") || url.includes("youtu.be")){
       var videoId = "";
-
       if(url.includes("youtu.be")){
         videoId = url.split("youtu.be/")[1].split(/[?&]/)[0];
       } 
@@ -133,46 +140,61 @@ function normalizeVideo(url){
         var u = new URL(url);
         videoId = u.searchParams.get("v");
       }
-
       if(videoId){
-        return "https://www.youtube.com/embed/" + videoId + "?rel=0&modestbranding=1";
+        return {type:'youtube', source:videoId};
       }
     }
 
     if(url.includes("vimeo.com")){
-      return "https://player.vimeo.com/video/" + url.split("/").pop();
+      return {type:'vimeo', source:url.split("/").pop()};
     }
 
     if(url.includes("/d/")){
       var driveId = url.split("/d/")[1].split("/")[0];
-      return "https://drive.google.com/file/d/" + driveId + "/preview";
+      return {type:'mp4', source:"https://drive.google.com/uc?export=download&id="+driveId};
     }
 
-    return url;
-  }catch(e){
-    return url;
-  }
+    return {type:'mp4', source:url};
+  }catch(e){ return {type:'mp4', source:url}; }
 }
+
+// ===== STORAGE KEY FOR AUTO-RESUME =====
+const storageKey = "resume_movie_" + movie.id;
+
+// ===== INITIALIZE PLYR =====
+const player = new Plyr('#player', {
+  autoplay:false,
+  controls:['play','progress','current-time','mute','volume','fullscreen']
+});
+
+// ===== WATCH BUTTON =====
 watchBtn.onclick = function(){
-  player.innerHTML =
-    '<iframe src="' + normalizeVideo(movie.video) + '" allow="autoplay; fullscreen" allowfullscreen></iframe>';
+  const v = normalizeVideo(movie.video);
+  let source;
+  if(v.type==='youtube') source={type:'video',sources:[{src:v.source,provider:'youtube'}]};
+  else if(v.type==='vimeo') source={type:'video',sources:[{src:v.source,provider:'vimeo'}]};
+  else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
+  
+  player.source = source;
 
-  // Show ad immediately for free users
+  // ===== AUTO-RESUME =====
+  const saved = JSON.parse(localStorage.getItem(storageKey));
+  if(saved && saved.time) player.currentTime = saved.time;
+
+  player.play();
+
   showAd();
-
-  // Clear any old ad timer
   if(adTimer) clearInterval(adTimer);
-
-  // Show ads every 10 minutes
   adTimer = setInterval(function(){
-    if(hasValidPIN()){
-      clearInterval(adTimer);
-      return;
-    }
+    if(hasValidPIN()){ clearInterval(adTimer); return; }
     showAd();
   }, AD_INTERVAL);
 };
 
+// ===== SAVE TIME PERIODICALLY =====
+player.on('timeupdate', function(){
+  localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
+});
 
 // ===== SHARE LOGIC (UNCHANGED) =====
 var SHARE_URL = "https://busanso-nation.github.io/home.html";
