--- a/movies.html
+++ b/movies.html
@@ -27,7 +27,7 @@ body{
   border-radius:12px;
 }
 
-/* NAV */
+/* NAV - COLORFUL */
 .nav{
   display:flex;
   gap:10px;
@@ -42,16 +42,20 @@ body{
   padding:14px;
   border:none;
   border-radius:18px;
-  background:linear-gradient(45deg,#282828,#383838);
+  background:linear-gradient(45deg, #ff7f50, #ff6347);
   color:#fff;
   font-weight:bold;
   font-size:16px;
   cursor:pointer;
-  transition:.25s;
+  transition:.3s;
+  box-shadow: 0 4px 12px rgba(0,0,0,.5);
 }
+.nav button:nth-child(2){background:linear-gradient(45deg, #6a5acd, #836fff);}
+.nav button:nth-child(3){background:linear-gradient(45deg, #20b2aa, #3cb371);}
+.nav button:nth-child(4){background:linear-gradient(45deg, #ff69b4, #ff1493);}
 .nav button:hover{
-  background:linear-gradient(45deg,#e50914,#ff416c);
-  transform:translateY(-2px);
+  filter: brightness(1.2) saturate(1.3);
+  transform:translateY(-2px) scale(1.05);
 }
 
 /* SEARCH */
@@ -211,11 +215,9 @@ body{
 
 <!-- STICKY FOOTER CATEGORIES -->
 <div class="footer-categories">
-  <button onclick="filterCategory('ACTION')">ACTION</button>
-  <button onclick="filterCategory('DRAMA')">DRAMA</button>
-  <button onclick="filterCategory('KASANSO')">KASANSO</button>
-  <button onclick="filterCategory('SCIFI')">SCIFI</button>
-  <button onclick="filterCategory('HORROR')">HORROR</button>
+  <button onclick="filterCountry('INDIAN')">INDIAN</button>
+  <button onclick="filterCountry('USA')">USA</button>
+  <button onclick="filterCountry('KOREAN')">KOREAN</button>
 </div>
 
 <script>
@@ -259,9 +261,9 @@ search.oninput=()=>{
   render(MOVIES.filter(m=>m.title.toLowerCase().includes(q)));
 };
 
-/* CATEGORY FILTER */
-function filterCategory(cat){
-  render(MOVIES.filter(m => m.genre && m.genre.toUpperCase() === cat));
+/* COUNTRY FILTER */
+function filterCountry(country){
+  render(MOVIES.filter(m => m.country && m.country.toUpperCase() === country));
 }
 </script>
 
