--- a/movies.html
+++ b/movies.html
@@ -215,9 +215,9 @@ body{
 
 <!-- STICKY FOOTER CATEGORIES -->
 <div class="footer-categories">
-  <button onclick="filterCountry('INDIAN')">INDIAN</button>
+  <button onclick="filterCountry('India')">INDIAN</button>
   <button onclick="filterCountry('USA')">USA</button>
-  <button onclick="filterCountry('KOREAN')">KOREAN</button>
+  <button onclick="filterCountry('Korea')">KOREAN</button>
 </div>
 
 <script>
